--- a/KimHunJin/Sooltudy/app/src/main/res/values/strings.xml
+++ b/KimHunJin/Sooltudy/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_second">SecondActivity</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_sql">SQLActivity</string>
+    <string name="title_activity_diary">DiaryActivity</string>
+    <string name="title_activity_sqlite_test">SQLiteTest</string>
 </resources>
